--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 <!-- Home -->
 <section id="home" class="section hero">
     <h1>WELCOME TO<br><span>MY PORTFOLIO</span></h1>
-    <img src="images/profile.jpg" alt="Ishini Awanka" class="hero-img">
+    <img src="profile.jpg" alt="Ishini Awanka" class="hero-img">
 
     <P></P>
     <P></P>
