--- a/index.html
+++ b/index.html
@@ -1,128 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Portfolio | Ishini Awanka</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Portfolio | Ishini Awanka</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <!-- External CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- Particles -->
+  <div id="particles-js"></div>
 
-<div id="particles-js"></div>
-
-
-
-
-<!-- Navigation -->
-<nav>
+  <!-- Navigation -->
+  <nav>
     <h2 class="logo">ISHINI AWANKA</h2>
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
-</nav>
+  </nav>
 
-<!-- Home -->
-<section id="home" class="section hero">
+  <!-- Home -->
+  <section id="home" class="section hero">
     <h1>WELCOME TO<br><span>MY PORTFOLIO</span></h1>
-    <img src="profile.jpg" alt="Ishini Awanka" class="hero-img">
-
-    <P></P>
-    <P></P>
+    <img src="profile.png" alt="Ishini Awanka" class="hero-img">
     <a href="#about" class="btn">Learn More</a>
-</section>
+  </section>
 
-<!-- About -->
-<section id="about" class="section dark">
+  <!-- About -->
+  <section id="about" class="section dark">
     <h2>ABOUT ME</h2>
-    <br>
     <p>
-        Hello! I’m Ishini Awanka, an undergraduate IT student with a passion for building clean, efficient,
-    and user-friendly digital solutions. I enjoy working with web technologies, software engineering
-    concepts, and image processing techniques.
+      I’m Ishini Awanka, an undergraduate IT student passionate about web development,
+      software engineering, and building elegant digital solutions.
     </p>
-    <p>
-        I’m currently focused on developing my skills as a future full-stack developer while exploring how
-    technology can be used to solve real-world problems. I believe in continuous learning, creativity,
-    and writing code that makes a difference.
-</p>
-</section>
+  </section>
 
-<!-- Education -->
-<section id="education" class="section">
+  <!-- Education -->
+  <section id="education" class="section">
     <h2>EDUCATION</h2>
-    <p></p>
+    <div class="card">Larana School – 2020</div>
+    <div class="card">Borcelle School – 2021</div>
+    <div class="card">Liceria University – 2022</div>
+  </section>
 
-    <div class="card">
-        <h3>2020 - Larana School</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-
-    <div class="card">
-        <h3>2021 - Borcelle School</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-
-    <div class="card">
-        <h3>2022 - Liceria University</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-</section>
-
-<!-- Experience -->
-<section id="experience" class="section dark">
+  <!-- Experience -->
+  <section id="experience" class="section dark">
     <h2>WORK EXPERIENCE</h2>
-    <p></p>
+    <div class="card">Studio Shodwe – 2023</div>
+    <div class="card">Liceria & Co. – 2024</div>
+    <div class="card">Borcelle – 2025</div>
+  </section>
 
-    <div class="card">
-        <h3>2023 - Studio Shodwe</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
+  <!-- Projects -->
+  <section id="projects" class="section">
+    <h2>PROJECTS</h2>
+    <div class="project">Smart Retail Shelf Monitoring System</div>
+    <div class="project">Portfolio Website</div>
+  </section>
 
-    <div class="card">
-        <h3>2024 - Liceria & Co.</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
+  <!-- Contact -->
+  <section id="contact" class="section dark">
+    <h2>CONTACT</h2>
+    <p>Email: awankaranathunga03@gmail.com</p>
+    <p>Phone: +94 743283799</p>
+    <p>LinkedIn: linkedin.com/in/ishini-awanka-0806a8356</p>
+  </section>
 
-    <div class="card">
-        <h3>2025 - Borcelle</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-</section>
+  <footer>
+    © 2026 Ishini Awanka | All Rights Reserved
+  </footer>
 
-<!-- Projects -->
-<section id="projects" class="section">
-    <h2>MY LATEST PROJECTS</h2>
-    <p></p>
-
-    <div class="project">
-        <h3>Project 1</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-
-    <div class="project">
-        <h3>Project 2</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-</section>
-
-<!-- Contact -->
-<section id="contact" class="section dark">
-    <h2>GET IN TOUCH</h2>
-    <p></p>
-    <p>Email: awankaranathunga03@fmail.com</p>
-    <p>Phone: +94743283799</p>
-    <p>Linkedin: www.linkedin.com/in/ishini-awanka-0806a8356</p>
-</section>
-
-<footer>
-    <p>© 2026 Ishini Awanka | All Rights Reserved</p>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-<script src="script.js"></script>
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
