--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <!-- External CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- Custom Cursor -->
+  <div class="cursor"></div>
+  <div class="cursor-follower"></div>
+
   <!-- Particles -->
   <div id="particles-js"></div>
+
+  <!-- Profile Photo (Top Right) -->
+  <img src="profile.png" alt="Ishini Awanka" class="profile-top">
 
   <!-- Navigation -->
   <nav>
@@ -23,7 +30,6 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#education">Education</a></li>
-      <li><a href="#experience">Experience</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
@@ -31,53 +37,44 @@
 
   <!-- Home -->
   <section id="home" class="section hero">
-    <h1>WELCOME TO<br><span>MY PORTFOLIO</span></h1>
-    <img src="profile.png" alt="Ishini Awanka" class="hero-img">
-    <a href="#about" class="btn">Learn More</a>
+    <h1>Hello, I’m <span>Ishini</span></h1>
+    <p>Undergraduate IT Student | Web Developer</p>
+    <a href="#about" class="btn">Explore</a>
   </section>
 
   <!-- About -->
   <section id="about" class="section dark">
-    <h2>ABOUT ME</h2>
+    <h2>About Me</h2>
     <p>
-      I’m Ishini Awanka, an undergraduate IT student passionate about web development,
-      software engineering, and building elegant digital solutions.
+      I’m an undergraduate IT student passionate about web development,
+      UI design, and building elegant digital experiences.
     </p>
   </section>
 
   <!-- Education -->
   <section id="education" class="section">
-    <h2>EDUCATION</h2>
+    <h2>Education</h2>
     <div class="card">Larana School – 2020</div>
     <div class="card">Borcelle School – 2021</div>
     <div class="card">Liceria University – 2022</div>
   </section>
 
-  <!-- Experience -->
-  <section id="experience" class="section dark">
-    <h2>WORK EXPERIENCE</h2>
-    <div class="card">Studio Shodwe – 2023</div>
-    <div class="card">Liceria & Co. – 2024</div>
-    <div class="card">Borcelle – 2025</div>
-  </section>
-
   <!-- Projects -->
-  <section id="projects" class="section">
-    <h2>PROJECTS</h2>
+  <section id="projects" class="section dark">
+    <h2>Projects</h2>
     <div class="project">Smart Retail Shelf Monitoring System</div>
-    <div class="project">Portfolio Website</div>
+    <div class="project">Personal Portfolio Website</div>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="section dark">
-    <h2>CONTACT</h2>
+  <section id="contact" class="section">
+    <h2>Contact</h2>
     <p>Email: awankaranathunga03@gmail.com</p>
     <p>Phone: +94 743283799</p>
-    <p>LinkedIn: linkedin.com/in/ishini-awanka-0806a8356</p>
   </section>
 
   <footer>
-    © 2026 Ishini Awanka | All Rights Reserved
+    © 2026 Ishini Awanka
   </footer>
 
   <!-- Scripts -->
@@ -85,3 +82,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
