--- a/index.html
+++ b/index.html
@@ -134,10 +134,23 @@
 <!-- Projects -->
 <section id="projects" class="section">
     <h2>MY LATEST PROJECTS</h2>
-    <p></p>
+    <div class="project-card">
+    <img src="screenshot1.png" alt="Advanced Photo Editor Screenshot">
+    <p>Advanced Photo Editor</p>
+     <p>
+    Interactive Python Tkinter image editor with filters, adjustments, drawing, text, crop, and rotate features.
+  </p>
+  <ul>
+    <li>Open & save images in multiple formats</li>
+    <li>Filters: grayscale, sepia, blur, edge detection</li>
+    <li>Draw & add text</li>
+    <li>Crop & rotate images</li>
+  </ul>
+  <a href="https://github.com/Ishini01/AdvancedImageEditor" target="_blank">View on GitHub</a>
+    
 
     <div class="project">
-        <h3>Project 1</h3>
+        <h3></h3>
         <p></p>
     </div>
 
