--- a/index.html
+++ b/index.html
@@ -134,11 +134,8 @@
 <!-- Projects -->
 <section id="projects" class="section">
     <h2>MY LATEST PROJECTS</h2>
-    
-    
-
     <div class="project">
-    <h3>Advanced Photo Editor</h3>
+    <h3>Project 1</h3>
      <p>
     Interactive Python Tkinter image editor with filters, adjustments, drawing, text, crop, and rotate features.
   </p>
