--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio | Ishini Awanka Ranathunga</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -83,7 +83,11 @@
         <p>BSc.Information Technology Faculty of Applied Scienses</p>
     </div>
 
- 
+    <!--<div class="card">
+        <h3>2022 - Liceria University</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+</section>-->
 
 <!-- Experience -->
 <section id="certificates" class="section dark">
@@ -134,21 +138,10 @@
 <!-- Projects -->
 <section id="projects" class="section">
     <h2>MY LATEST PROJECTS</h2>
+    <p></p>
+
     <div class="project">
-    <h3>Project 1</h3>
-    <br>
-     <p>
-    Interactive Python Tkinter image editor with filters, adjustments, drawing, text, crop, and rotate features.
-     </p>
-    <br>
-      <ul>
-        <li>Open & save images in multiple formats</li>
-        <li>Filters: grayscale, sepia, blur, edge detection</li>
-        <li>Draw & add text</li>
-        <li>Crop & rotate images</li>
-      </ul>
-    <br>
-  <a href="https://github.com/Ishini01/AdvancedImageEditor" target="_blank">View on GitHub</a>
+        <h3>Project 1</h3>
         <p></p>
     </div>
 
@@ -174,4 +167,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
