--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Ishini Awanka Ranathunga</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- Particles Background -->
+<!-- PARTICLES BACKGROUND -->
 <div id="particles-js"></div>
 
 <!-- Navigation -->
@@ -24,24 +23,24 @@
     </ul>
 </nav>
 
-<!-- Home / Hero Section -->
+<!-- Home Section -->
 <section id="home" class="section hero">
     <div class="hero-container">
-        <div class="hero-text animate-fade-in">
+        <div class="hero-text">
             <h1>
                 WELCOME TO <br>
                 <span>MY PORTFOLIO</span>
             </h1>
             <a href="#about" class="btn">Learn More</a>
         </div>
-        <div class="hero-image animate-slide-in-right">
+        <div class="hero-image">
             <img src="profile.png" alt="Ishini Awanka">
         </div>
     </div>
 </section>
 
 <!-- About Section -->
-<section id="about" class="section dark animate-fade-in-up">
+<section id="about" class="section dark">
     <h2>ABOUT ME</h2>
     <p>
         Hello! I’m Ishini Awanka, an undergraduate IT student with a passion for building clean, efficient,
@@ -56,21 +55,21 @@
 </section>
 
 <!-- Education Section -->
-<section id="education" class="section animate-fade-in-up">
+<section id="education" class="section">
     <h2>EDUCATION</h2>
     <div class="card">
         <h3>2011 - 2020</h3>
         <p>Maliyadewa Balika Vidyalaya - Kurunegala</p>
     </div>
     <div class="card">
-        <h3>2023 - Present</h3>
+        <h3>2023 - present</h3>
         <p>Rajarata University of Sri Lanka - Mihinthale</p>
         <p>BSc. Information Technology, Faculty of Applied Sciences</p>
     </div>
 </section>
 
 <!-- Certificates Section -->
-<section id="certificates" class="section dark animate-fade-in-up">
+<section id="certificates" class="section dark">
     <h2>CERTIFICATES</h2>
     <div class="card">
         <h3>2025 - Google AI Essentials</h3>
@@ -83,14 +82,14 @@
         <a href="https://www.coursera.org/account/accomplishments/specialization/7G3AZCFAB17A" target="_blank" class="btn-small">View Certificate</a>
     </div>
     <div class="card">
-        <h3>2025 - HTML & CSS (Alison)</h3>
+        <h3>2025 - Introduction to HTML and CSS (Alison)</h3>
         <p>Issued by Alison</p>
         <a href="https://alison.com/certification/check/2172b95f09" target="_blank" class="btn-small">View Certificate</a>
     </div>
     <div class="card">
-        <h3>2025 - C++ Crash Course</h3>
+        <h3>2025 - C++ Training Crash Course for Beginners</h3>
         <p>Issued by Udemy</p>
-        <a href="https://www.udemy.com/certificate/UC-7cbc1066-47ee-435a-82ac-1619043eccd4/" target="_blank" class="btn-small">View Certificate</a>
+        <a href="https://www.udemy.com/certificate/UC-7cbc1066-47ee-435a-82ac-1619043eccd4" target="_blank" class="btn-small">View Certificate</a>
     </div>
     <div class="card">
         <h3>2025 - Master of Essential C++ Programming</h3>
@@ -100,26 +99,24 @@
 </section>
 
 <!-- Projects Section -->
-<section id="projects" class="section animate-fade-in-up">
+<section id="projects" class="section">
     <h2>MY LATEST PROJECTS</h2>
-
-    <!-- Advanced Photo Editor Project Card -->
-    <div class="project-card animate-scale-up">
-        <img src="images/screenshot1.png" alt="Advanced Photo Editor">
+    <div class="project-card">
         <h3>Advanced Photo Editor</h3>
-        <p>Interactive Python Tkinter image editor with filters, adjustments, drawing, text, crop, and rotate features.</p>
-        <a href="https://github.com/Ishini01/AdvancedImageEditor" target="_blank" class="btn-small">View on GitHub</a>
+        <p>A desktop image editor with custom filters, adjustments, crop, draw, text tools, and more.</p>
     </div>
-
-    <!-- Add more projects here -->
+    <div class="project-card">
+        <h3>Project 2</h3>
+        <p>Description of your second project goes here.</p>
+    </div>
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="section dark animate-fade-in-up">
+<section id="contact" class="section dark">
     <h2>GET IN TOUCH</h2>
     <p>Email: awankaranathunga03@fmail.com</p>
     <p>Phone: +94743283799</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/ishini-awanka-0806a8356" target="_blank">Visit Profile</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/ishini-awanka-0806a8356" target="_blank">www.linkedin.com/in/ishini-awanka</a></p>
 </section>
 
 <!-- Footer -->
@@ -127,9 +124,10 @@
     <p>© 2026 Ishini Awanka | All Rights Reserved</p>
 </footer>
 
-<!-- Scripts -->
+<!-- SCRIPTS -->
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script src="script.js"></script>
 
 </body>
 </html>
+
