--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         and user-friendly digital solutions. I enjoy working with web technologies, software engineering
         concepts, and image processing techniques.
     </p>
+    <br>
     <p>
         I’m currently focused on developing my skills as a future full-stack developer while exploring how
         technology can be used to solve real-world problems. I believe in continuous learning, creativity,
@@ -103,7 +104,10 @@
     <h2>MY LATEST PROJECTS</h2>
     <div class="project-card">
         <h3>Advanced Photo Editor</h3>
+        <br>
         <p>A desktop image editor with custom filters, adjustments, crop, draw, text tools, and more.</p>
+        <br>
+        <a href = "https://github.com/Ishini01/AdvancedImageEditor">
     </div>
     <div class="project-card">
         <h3>Project 2</h3>
