--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <br>
         <p>A desktop image editor with custom filters, adjustments, crop, draw, text tools, and more.</p>
         <br>
-        <a href = "https://github.com/Ishini01/AdvancedImageEditor">
+        <a href = "https://github.com/Ishini01/AdvancedImageEditor"> View on GitHub<a/>
     </div>
     <div class="project-card">
         <h3>Project 2</h3>
