--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 
-<!-- PARTICLES BACKGROUND -->
 <div id="particles-js"></div>
 
 <!-- Navigation -->
@@ -47,7 +46,6 @@
         and user-friendly digital solutions. I enjoy working with web technologies, software engineering
         concepts, and image processing techniques.
     </p>
-    <br>
     <p>
         I’m currently focused on developing my skills as a future full-stack developer while exploring how
         technology can be used to solve real-world problems. I believe in continuous learning, creativity,
@@ -65,7 +63,7 @@
     <div class="card">
         <h3>2023 - present</h3>
         <p>Rajarata University of Sri Lanka - Mihinthale</p>
-        <p>BSc. Information Technology, Faculty of Applied Sciences</p>
+        <p>BSc. Information Technology Faculty of Applied Sciences</p>
     </div>
 </section>
 
@@ -74,44 +72,33 @@
     <h2>CERTIFICATES</h2>
     <div class="card">
         <h3>2025 - Google AI Essentials</h3>
-        <p>Issued by Coursera</p>
+        <p>Issued by Coursera, 2025</p>
         <a href="https://www.coursera.org/account/accomplishments/specialization/SRI6S6UPLDHV" target="_blank" class="btn-small">View Certificate</a>
     </div>
     <div class="card">
         <h3>2025 - Google UX Certification</h3>
-        <p>Issued by Coursera</p>
+        <p>Issued by Coursera, 2025</p>
         <a href="https://www.coursera.org/account/accomplishments/specialization/7G3AZCFAB17A" target="_blank" class="btn-small">View Certificate</a>
     </div>
     <div class="card">
         <h3>2025 - Introduction to HTML and CSS (Alison)</h3>
-        <p>Issued by Alison</p>
+        <p>Issued by Alison, 2025</p>
         <a href="https://alison.com/certification/check/2172b95f09" target="_blank" class="btn-small">View Certificate</a>
-    </div>
-    <div class="card">
-        <h3>2025 - C++ Training Crash Course for Beginners</h3>
-        <p>Issued by Udemy</p>
-        <a href="https://www.udemy.com/certificate/UC-7cbc1066-47ee-435a-82ac-1619043eccd4" target="_blank" class="btn-small">View Certificate</a>
-    </div>
-    <div class="card">
-        <h3>2025 - Master of Essential C++ Programming</h3>
-        <p>Issued by Udemy</p>
-        <a href="https://www.udemy.com/certificate/UC-1a8d4323-192f-42da-a948-0b50e2d949a3/" target="_blank" class="btn-small">View Certificate</a>
     </div>
 </section>
 
 <!-- Projects Section -->
 <section id="projects" class="section">
     <h2>MY LATEST PROJECTS</h2>
-    <div class="project-card">
+    <div class="card project-card">
         <h3>Advanced Photo Editor</h3>
-        <br>
         <p>A desktop image editor with custom filters, adjustments, crop, draw, text tools, and more.</p>
-        <br>
-        <a href = "https://github.com/Ishini01/AdvancedImageEditor"> View on GitHub<a/>
+        <a href="https://github.com/Ishini01/AdvancedImageEditor" target="_blank" class="btn-small">View Project</a>
     </div>
-    <div class="project-card">
+    <div class="card project-card">
         <h3>Project 2</h3>
-        <p>Description of your second project goes here.</p>
+        <p>Description of your second project goes here. You can add features, technologies used, and a short summary.</p>
+        <a href="#" target="_blank" class="btn-small">View Project</a>
     </div>
 </section>
 
@@ -120,7 +107,7 @@
     <h2>GET IN TOUCH</h2>
     <p>Email: awankaranathunga03@fmail.com</p>
     <p>Phone: +94743283799</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/ishini-awanka-0806a8356" target="_blank">www.linkedin.com/in/ishini-awanka</a></p>
+    <p>Linkedin: www.linkedin.com/in/ishini-awanka-0806a8356</p>
 </section>
 
 <!-- Footer -->
@@ -128,10 +115,9 @@
     <p>© 2026 Ishini Awanka | All Rights Reserved</p>
 </footer>
 
-<!-- SCRIPTS -->
+<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script src="script.js"></script>
-
 </body>
 </html>
 
