--- a/index.html
+++ b/index.html
@@ -85,6 +85,20 @@
         <p>Issued by Alison, 2025</p>
         <a href="https://alison.com/certification/check/2172b95f09" target="_blank" class="btn-small">View Certificate</a>
     </div>
+    <div class="card">
+        <h3>2025 - C++ Training Crash Course for C++ Beginners</h3>
+        <p>Issued by Udemy, 2025</p>
+        <br>
+        <a href="https://www.udemy.com/certificate/UC-7cbc1066-47ee-435a-82ac-1619043eccd4/?utm_campaign=email&utm_medium=email&utm_source=sendgrid.com" target="_blank" class="btn-small">View Certificate</a>
+        
+    </div>
+     <div class="card">
+        <h3>2025 - Master of Essential C++ Programming Beginner to Advanced</h3>
+        <p>Issued by Udemy, 2025</p>
+        <br>
+        <a href="https://www.udemy.com/certificate/UC-1a8d4323-192f-42da-a948-0b50e2d949a3/" target="_blank" class="btn-small">View Certificate</a>
+        
+    </div>
 </section>
 
 <!-- Projects Section -->
@@ -93,6 +107,7 @@
     <div class="card project-card">
         <h3>Advanced Photo Editor</h3>
         <p>A desktop image editor with custom filters, adjustments, crop, draw, text tools, and more.</p>
+        <br>
         <a href="https://github.com/Ishini01/AdvancedImageEditor" target="_blank" class="btn-small">View Project</a>
     </div>
     <div class="card project-card">
