--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <a href="https://github.com/Ishini01/AdvancedImageEditor" target="_blank" class="btn-small">View Project</a>
     </div>
     <div class="card project-card">
-        <h3>Project 2</h3>
+        <h3>Plant Growth Analyzing System</h3>
         <p>Description of your second project goes here. You can add features, technologies used, and a short summary.</p>
         <a href="#" target="_blank" class="btn-small">View Project</a>
     </div>
