--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     </div>
     <div class="card project-card">
         <h3>Plant Growth Analyzing System</h3>
-        <p>Description of your second project goes here. You can add features, technologies used, and a short summary.</p>
-        <a href="#" target="_blank" class="btn-small">View Project</a>
+        <p>A system to analyze plant images for health, detect diseases, and provide recommendations.</p>
+        <a href="ttps://github.com/Ishini01/Plant_analysis_system" target="_blank" class="btn-small">View Project</a>
     </div>
 </section>
 
